fix mepg scrollbar issue improve Bqe Design

--- a/plugin/public/css/style.css
+++ b/plugin/public/css/style.css
@@ -583,7 +583,7 @@ a.focus {outline: none;}
 
 #dcurrent {width:680px;height:137px;}
 
-#tvcontentmain { height :calc(100vh - 195px);}
+#tvcontentmain { height :calc(100vh - 200px);}
 
 #currenttuners span
 {
